[project]
name = "isic-2020"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.5",
    "keras>=3.9.2",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "tensorflow>=2.19.0",
]
